@@ -1,9 +1,9 @@
 package com.example.backend_nutripoint.services;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -25,39 +25,39 @@ public class ImgProdService {
     private final ProductoRepository productoRepository;
 
     private static final List<String> ALLOWED_MIME_TYPES = Arrays.asList(
-        "image/jpeg", "image/png", "image/jpg"
-    );
+            "image/jpeg", "image/png", "image/jpg");
 
     private static final long MAX_SIZE_IN_BYTES = 2 * 1024 * 1024;
 
     @Value("${app.image.base-url}")
-    private String baseUrl; 
+    private String baseUrl;
 
     @Transactional
-    public String uploadImage(MultipartFile file, Integer productoId) throws IOException {
-        String mimeType = file.getContentType();
-        if (!ALLOWED_MIME_TYPES.contains(mimeType)) {
-            throw new IllegalArgumentException("Tipo de archivo no soportado. Solo se permiten imágenes JPEG, JPG y PNG.");
-        }
-        if (file.getSize() > MAX_SIZE_IN_BYTES) {
-            throw new IllegalArgumentException("El archivo es demasiado grande. El tamaño máximo permitido es 2MB.");
-        }
-
+    public List<String> uploadImage(List<MultipartFile> files, Integer productoId) throws IOException {
         Producto producto = productoRepository.findById(productoId)
                 .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
+        
+        List<ImgProd> imagenes = new ArrayList<>();
 
+        for(MultipartFile file: files){
+            validateImage(file);
+        
         // Convertir archivo a bytes
         byte[] imageData = file.getBytes();
 
         // Guardar en la BD
         ImgProd imgProd = new ImgProd();
         imgProd.setImage(imageData);
-        imgProd.setContentType(mimeType);
+        imgProd.setContentType(file.getContentType());
         imgProd.setProducto(producto);
-        imgProdRepository.save(imgProd);
+        
+        imagenes.add(imgProd);
+        }
 
+        imgProdRepository.saveAll(imagenes);
         // Devolver URL simulada
-        return baseUrl + imgProd.getIdImg();
+        return secureURLImages(imagenes);
+        // return baseUrl + imgProd.getIdImg();
     }
 
     public byte[] getImageById(Integer idImg) {
@@ -66,9 +66,9 @@ public class ImgProdService {
         return imgProd.getImage();
     }
 
-    public String getType(Integer idImg){
+    public String getType(Integer idImg) {
         ImgProd imgProd = imgProdRepository.findById(idImg)
-            .orElseThrow(() -> new RuntimeException("Imagen no encontrada"));
+                .orElseThrow(() -> new RuntimeException("Imagen no encontrada"));
         return imgProd.getContentType();
     }
 
@@ -84,10 +84,25 @@ public class ImgProdService {
         }
 
         // Convertir la lista de imágenes en URLs
+        return secureURLImages(imagenes);
+        // .toList(); CREO QUE PUEDE PONERSE SIMPLEMENTE ASI
+    }
+
+    private void validateImage(MultipartFile file) {
+        String mimeType = file.getContentType();
+        if (!ALLOWED_MIME_TYPES.contains(mimeType)) {
+            throw new IllegalArgumentException("Tipo de archivo no soportado. Solo JPEG, JPG o PNG.");
+        }
+        if (file.getSize() > MAX_SIZE_IN_BYTES) {
+            throw new IllegalArgumentException("El archivo excede el máximo de 2MB.");
+        }
+    }
+
+    private List<String> secureURLImages(List<ImgProd> imagenes){
         return imagenes.stream()
                 .map(img -> baseUrl + img.getIdImg())
-                .collect(Collectors.toList());
-                // .toList();  CREO QUE PUEDE PONERSE SIMPLEMENTE ASI
-        }
+                .toList();
+                // .collect(Collectors.toList());
+    }
 
 }
