@@ -1,18 +1,17 @@
 package com.example.backend_nutripoint.services;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 
 import com.example.backend_nutripoint.DTO.CreateProductDTO;
 import com.example.backend_nutripoint.DTO.ProductResponseDTO;
 import com.example.backend_nutripoint.exceptions.NotFoundException;
 import com.example.backend_nutripoint.models.ImgProd;
 import com.example.backend_nutripoint.models.Producto;
-import com.example.backend_nutripoint.repositories.ImgProdRepository;
 import com.example.backend_nutripoint.repositories.ProductoRepository;
 
 import jakarta.transaction.Transactional;
@@ -22,12 +21,15 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class ProductService {
     private final ProductoRepository productoRepository;
-    private final ImgProdRepository imgProdRepository;
+    private final ImgProdService imgProdService;
+
+    @Value("${app.image.base-url}")
+    private String imageUrl;
 
     @Transactional
-    public ProductResponseDTO createProduct(CreateProductDTO dto){
+    public ProductResponseDTO createProduct(CreateProductDTO dto) throws IOException {
         if (productoRepository.existsByNombre(dto.getNombre())) {
-            throw new IllegalArgumentException("El producto con nombre: "+dto.getNombre()+" ya existe.");
+            throw new IllegalArgumentException("El producto con nombre: " + dto.getNombre() + " ya existe.");
         }
         Producto prod = new Producto();
         prod.setNombre(dto.getNombre());
@@ -39,52 +41,41 @@ public class ProductService {
         prod.setAdvert(dto.getAdvert());
 
         Producto savedProduct = productoRepository.save(prod);
+        List<String> imagenesURL = new ArrayList<>();
 
         if (dto.getImagenes() != null && !dto.getImagenes().isEmpty()) {
-            List<ImgProd> imagenes = dto.getImagenes().stream()
-                .map(file -> guardarImagen(file, savedProduct))
-                .toList();
-
-                imgProdRepository.saveAll(imagenes);
+            imagenesURL = imgProdService.uploadImage(dto.getImagenes(), savedProduct.getIdProducto());
         }
 
-        return mapToDTO(savedProduct);
+        return mapToDTO(savedProduct, imagenesURL);
     }
 
     public List<ProductResponseDTO> getAllProductos() {
         List<Producto> productos = productoRepository.findAll();
-        return productos.stream().map(this::mapToDTO).toList();
+        return productos.stream().map(product -> mapToDTO(product, imagenesWithSecureUrl(product.getImagenes()))).toList();
     }
 
     public ProductResponseDTO getProductoById(Integer id) {
         Producto producto = productoRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Producto no encontrado. ID: "+id));
-        return mapToDTO(producto);
+                .orElseThrow(() -> new NotFoundException("Producto no encontrado. ID: " + id));
+        return mapToDTO(producto, imagenesWithSecureUrl(producto.getImagenes()));
     }
 
     public void deleteProducto(Integer id) {
         productoRepository.deleteById(id);
     }
 
-    private ImgProd guardarImagen(MultipartFile file, Producto producto) {
-        try {
-            ImgProd imgProd = new ImgProd();
-            imgProd.setImage(file.getBytes());
-            imgProd.setContentType(file.getContentType());
-            imgProd.setProducto(producto);
-            return imgProd;
-        } catch (IOException e) {
-            throw new RuntimeException("Error al guardar la imagen", e);
-        }
-    }
-
-    private ProductResponseDTO mapToDTO(Producto prod) {
-        List<String> imagenesUrls = prod.getImagenes() != null
-                ? prod.getImagenes().stream()
-                    .map(img -> "http://localhost:8080/imagenes/" + img.getIdImg())
-                    .collect(Collectors.toList())
+    private List<String> imagenesWithSecureUrl(List<ImgProd> imagenes) {
+        List<String> imagenesUrls = imagenes != null
+                ? imagenes.stream()
+                        .map(img -> imageUrl + img.getIdImg())
+                        .toList()
                 : List.of();
 
+        return imagenesUrls;
+    }
+
+    private ProductResponseDTO mapToDTO(Producto prod, List<String> imagenesUrls) {
         return ProductResponseDTO.builder()
                 .idProducto(prod.getIdProducto())
                 .nombre(prod.getNombre())
